<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_files"
            android:icon="@drawable/ic_menu_files"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_qr_scanner"
            android:icon="@drawable/ic_menu_qr_scanner"
            android:title="@string/menu_qr_scanner" />
        <item
            android:id="@+id/nav_server_stats"
            android:icon="@drawable/ic_server_stats"
            android:title="@string/menu_server_stats" />
    </group>
</menu>